<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

        <!-- Preview -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/common_padding"
            android:paddingEnd="@dimen/common_padding"
            android:background="@android:color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_group_title_height"
                android:gravity="center_vertical"
                android:text="@string/disorder_preview"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:paddingStart="@dimen/common_padding_small"
                android:paddingLeft="@dimen/common_padding_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="center"
                    android:text="@string/classic"/>
                <CheckBox
                    android:id="@+id/classic_disorder_preview_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_gravity="bottom"
                    android:background="@android:color/darker_gray"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:paddingStart="@dimen/common_padding_small"
                android:paddingLeft="@dimen/common_padding_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="center"
                    android:text="@string/serial"/>
                <CheckBox
                    android:id="@+id/serial_disorder_preview_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_gravity="bottom"
                    android:background="@android:color/darker_gray"/>
            </FrameLayout>

        </LinearLayout>

        <!-- Five star -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:layout_marginTop="@dimen/setting_group_gap"
            android:paddingStart="@dimen/common_padding"
            android:paddingLeft="@dimen/common_padding"
            android:paddingEnd="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            android:gravity="center_vertical"
            android:background="@drawable/item_background">
            <TextView
                android:id="@+id/five_star"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/five_star"/>
        </LinearLayout>

        <!-- Privacy Policy -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:paddingStart="@dimen/common_padding"
            android:paddingLeft="@dimen/common_padding"
            android:paddingEnd="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            android:gravity="center_vertical"
            android:background="@drawable/item_background">
            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/privacy_policy"/>
        </LinearLayout>

        <!-- Exit Game -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:paddingStart="@dimen/common_padding"
            android:paddingLeft="@dimen/common_padding"
            android:paddingEnd="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            android:gravity="center_vertical"
            android:background="@drawable/item_background">
            <TextView
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/exit"/>
        </LinearLayout>



</LinearLayout>
</LinearLayout>
